# gemini-glowchart-agent

./: .gitignore  README.md  main.py  pyproject.toml  smoke.py
.github/workflows/: test.yml
.video-build/: build.sh  render_browser.py  render_terminal.py  render_title.py
scripts/: live_verify.py
src/gemini_glowchart_agent/: __init__.py  agent.py  auth.py  prompt.py  runner.py  stubs.py  tools.py
tests/: conftest.py  test_agent.py  test_tools.py
